ch9/ch9-start/iac-macro-usage/tests/fails/lambda_time_not_a_number.stderr
error: expected integer literal
 --> tests/fails/lambda_time_not_a_number.rs:5:25
  |
5 |         lambda name mem "yes"
  |                         ^^^^^
